# gst-omx

./: Makefile.am  configure.ac
config/ti/: gstomx.conf
gst/: Makefile.am
gst/h264parser/: Makefile.am  gstrrh264parser.c  gstrrh264parser.h
gst/perf/: gstperf.c  gstperf.h
omx/: Makefile.am  gstomx.c  gstomx.h  gstomxbufferalloc.c  gstomxbufferalloc.h  gstomxbufferpool.c  gstomxbufferpool.h  gstomxcamera.c  gstomxcamera.h  gstomxh264dec.c  gstomxh264enc.c  gstomxh264enc.h  gstomxmdeiscaler.c  gstomxmdeiscaler.h  gstomxvideodec.c  gstomxvideodec.h  gstomxvideoenc.c  gstomxvideoenc.h  gstomxvideofilter.c  gstomxvideofilter.h
opensource_build/gst-plugins-good-1.6.1/patches/: 001-using-userptr-memory-provided-by-omx  002-adding-stride-to-pixel-format  003-adding-queue-size-property-v4l2src  series
tests/: Makefile.am  README
tests/check/: Makefile.am
tests/examples/: Makefile.am
tests/examples/encode/: Makefile.am  core.c  recording.h
